--- a/requirements_dev.txt
+++ b/requirements_dev.txt
@@ -1,10 +1,11 @@
-pymongo
-pymongo[srv]
-dnspython
 pandas
-numpy 
-ensure
-pytest
+scikit-learn
+numpy
+seaborn
+flask
+mlflow==2.2.2
+dvc
+
 
 
 -e .
